--- a/src/Header.css
+++ b/src/Header.css
@@ -4,7 +4,7 @@ header{
     display: flex;
     justify-content: space-between;
     background-color: #fff;
-    padding: 15px 0;
+    /* padding: 15px 0; */
     align-items: center;
     z-index: -20;
     margin-bottom:20px;
@@ -25,6 +25,13 @@ nav i{
 
 #logo{
     margin-left: 100px;
+    width:150px;
+    height: auto;
+    font-size:1.9em;
+    color:black;
+    margin:20px auto;
+    display: inline-block;
+    font-weight: bold;
 }
 
 #profile{
@@ -154,11 +161,13 @@ nav i{
 
   .sidenav {
     height: 100%;
-    width:0;
+    max-height: 100%;
+    /* width:0; */
     position: fixed;
     top: 0;
-    z-index: 1;
+    z-index: 100;
     left: 0;
+    bottom:0;
     background-color: #fff;
     overflow-x: hidden;
     transition: 0.2s ease-in-out;
@@ -448,3 +457,112 @@ button.unfollo{
   position: absolute;
   animation: spin 0.5s linear infinite; /* Spin animation */
 }
+
+
+#follow{
+  flex-grow: 6;
+  max-width:400px;
+  min-width:400px;
+  display:inline-block;
+  vertical-align:top;
+}
+
+.post{
+  overflow-y:hidden;
+  overflow-x:hidden;
+  height:90vh;
+}
+#put{
+  height:auto;
+  width:40%;
+  border:1px solid #ced4da;
+  font-size:1.2em;
+  padding:5px;
+  margin:0px 20px;
+  margin-bottom:10px;
+}
+.maroc{
+  width: 65%; 
+  height: 100%; 
+  overflow: hidden; 
+  position: relative;
+}
+
+.france{
+  display:flex;
+  flex-direction:column;
+  max-height:100%;
+  height:76%;
+  overflow-y:scroll;
+}
+.maroc img{
+  width: 100%; 
+  min-height: 100%; 
+  position: absolute;
+}
+.senegal{
+  width:35%;
+  height:100%;
+  background-color:white;
+  padding:10px;
+}
+@media only screen and (max-width: 400px) {
+  #put{
+    width:90%;
+  }
+  .maroc{
+    width:100%;
+  }
+  .france{
+
+max-height: 150px;
+overflow-y: scroll;
+  }
+
+  .senegal{
+    width:100%;
+    height:100%;
+    background-color:white;
+    padding:10px;
+  }
+  .postg{
+    width:95%;
+    flex-direction: column;
+  }
+  .edcct{
+    width:100%;
+  }
+  #follow{
+    display: none;
+    background-color: red;
+  }
+  #navi{
+    display: flex;
+    align-items: center;
+  }
+  #post,.post{
+    width:90%;
+  }
+  /* .dropdown-contentt{
+    left:75px;
+  } */
+  header{
+    flex-wrap: wrap;
+    width: 100%;
+  }
+  /* .dropdown{
+    width:100%;
+  } */
+  #second{
+    width: 100%;
+    /* flex-wrap: wrap; */
+    flex-direction: column;
+    margin: auto;
+  }
+
+  #section1{
+    text-align: center;
+    width:100%;
+  }
+}
+
