--- a/src/Verify.css
+++ b/src/Verify.css
@@ -53,7 +53,7 @@ a{
 }
 
 /* loader.css */
-.loader {
+.loadr {
     border: 3px solid #f3f3f3; /* Light gray */
     border-top: 3px solid #3498db; /* Blue */
     border-right: 3px solid #3498db; /* Blue */
