--- a/src/Profile.css
+++ b/src/Profile.css
@@ -329,7 +329,7 @@ nav i{
     /* padding:5px; */
   }
 
-  #put:focus{
+  .put:focus{
     outline:2px solid #9bbff5;
     border-radius: 0;
   }
@@ -598,8 +598,13 @@ button.unblock{
   #kol{
     margin: auto;
   }
-  #put{
+  .put{
     width:90%;
+    height:auto;
+    border:1px solid #ced4da;
+    font-size:1.2em;
+    padding:5px;
+    margin-bottom:10px;  
   }
   .maroc{
     width:100%;
