--- a/src/Profile.css
+++ b/src/Profile.css
@@ -604,7 +604,7 @@ button.unblock{
     border:1px solid #ced4da;
     font-size:1.2em;
     padding:5px;
-    margin-bottom:10px; 
+    margin:0 20px 10px; 
   }
   .maroc{
     width:100%;
