--- a/src/Header.css
+++ b/src/Header.css
@@ -219,8 +219,7 @@ nav i{
     top: 0;
     left: 0;
     /* background-color: rgb(0,0,0); */
-    background-color: rgba(0,0,0, 0.5);
-    
+    background-color: #0000004d;
   }
   .all{
     height: 100%;
