--- a/src/Profile.css
+++ b/src/Profile.css
@@ -584,6 +584,9 @@ button.unblock{
     margin:0 20px 10px; 
   }
 @media only screen and (max-width: 400px) {
+    #lastName{
+        marginLeft:20px;
+    }
     .put{
     width:90%; 
   }
