--- a/src/Header.css
+++ b/src/Header.css
@@ -506,6 +506,9 @@ button.unfollo{
   padding:10px;
 }
 @media only screen and (max-width: 400px) {
+    #lastName{
+        marginLeft:20px;
+    }
     .dropdown-conten{
         right:5px;
     }
