--- a/src/Profile.css
+++ b/src/Profile.css
@@ -585,7 +585,7 @@ button.unblock{
   }
 @media only screen and (max-width: 400px) {
     #lastName{
-        marginLeft:20px;
+        margin-left:20px;
     }
     .put{
     width:90%; 
