--- a/src/Profile.css
+++ b/src/Profile.css
@@ -585,7 +585,7 @@ button.unblock{
   }
 @media only screen and (max-width: 400px) {
     #lastName{
-        margin-left:20px;
+        margin:15px 0px 0px 20px;
     }
     .put{
     width:90%; 
