--- a/src/Profile.css
+++ b/src/Profile.css
@@ -583,9 +583,14 @@ button.unblock{
     padding:5px;
     margin:0 20px 10px; 
   }
+#lastName,#firstName{
+    margin:15px 10px 0px 20px;
+    height:50px;
+    width:45%;
+}
 @media only screen and (max-width: 400px) {
-    #lastName{
-        margin:15px 0px 0px 20px;
+    #lastName,#firstName{
+        width:90%;
     }
     .put{
     width:90%; 
