--- a/src/Header.css
+++ b/src/Header.css
@@ -293,7 +293,7 @@ input.sayy{
  height:35px;
  padding:10px;
 width: 90%;
- /* margin-top:10px; */
+ margin-top:10px;
  /* margin-bottom:10px; */
  border:none;
  border-radius: 0px;
